# PythonDataLab

./: .gitignore  README.md  pyproject.toml
00_Info_Uteis_Projetos/: 02_Passo_a_Passo_Projetos.md
Ciencia_de_dados/: README.md
Ciencia_de_dados/Estatistica/: 01_Conceitos Estatisticos.md  02_Conceitos Estatisticos testes.md  Conceitos Estatisticos Exemplos.MD  Conceitos Estatisticos.MD  Permutacion test.ipynb  t_student - Intervalo Confianca.md  t_student - teste t calculo.md  t_student - teste t.ipynb
Ciencia_de_dados/Estudos_machine_learning/: 1_Pre_treinamento.md  2_Treinamento.md  3_Pos_treinamento.md  README.md
Ciencia_de_dados/Estudos_python/: 01_Funcion_Built-in.ipynb  02_Loc_Iloc.ipynb  datas_spark.ipynb
Estudos_machine_learning/: Comandos_ambiente.ipynb  Cross_validation_pyspark.ipynb  Estudando_Machine_Learning.ipynb  Regressao_linear_simples_exemplos.ipynb
Estudos_machine_learning/Notebooks/: 4-3-exercise-train-linear-regression.ipynb  4-5-exercise-multiple-linear-regression.ipynb  4-7-exercise-polynomial-regression.ipynb
Ferramentas_projetos/: README.md
Ferramentas_projetos/Bancos_de_Dados/: MongoDB.md  MongoDB_crud.md  MongoDB_operadores.md
Ferramentas_projetos/page/: Cookiecutter_data_science.md  Cookiecutter_data_science_ccds.md  Cookiecutter_estrutura_pastas.md  Dashboard.md  Estrutura_pastas_README.md  Poetry.md  Terminal.md  Terminal_shell.md  docker.md  git.md
config/: Microsoft.PowerShell_profile.ps1
info_uteis/: 01_Funcion_Built-in.ipynb  01_Funcion_Built-in.md  02_Passo_a_Passo_Projetos.md
info_uteis/pages/: Poetry.md
(+13 files in other folders)
