[tool.poetry]
name = "pythondatalab"
version = "0.1.0"
description = ""
authors = ["Espedito Ferreira Alves <Espeditoalves123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
findspark = "^2.0.1"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
scipy = "^1.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
